# miley

./: .gitignore  README.md  pyproject.toml
malware_test_image/: Dockerfile  README.md
miley/: client.py  container_handler.py  dir_walker.py  hasher.py  main.py
tests/: client_test.py
